Changed Stream method with Java 17