@@ -22,7 +22,6 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import org.bson.codecs.configuration.CodecProvider;
@@ -601,7 +600,7 @@ class ClientMongoRepositoryTest {
 			private List<Client> readAllClientsFromDatabase() {
 				return StreamSupport
 						.stream(clientCollection.find().spliterator(), false)
-						.collect(Collectors.toList());
+						.toList();
 			}
 		}
 
