@@ -20,7 +20,6 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import org.bson.codecs.configuration.CodecProvider;
@@ -650,7 +649,7 @@ class ReservationMongoRepositoryTest {
 			private List<Reservation> readAllReservationsFromDatabase() {
 				return StreamSupport
 						.stream(reservationCollection.find().spliterator(), false)
-						.collect(Collectors.toList());
+						.toList();
 			}
 		}
 
